# polls

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_tests.sh  setup.cfg
core/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  mixins.py  models.py  permissions.py  tests.py  utils.py
polls/api/v1/: serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_auto_20210611_1118.py
